# textual-guis

./: .gitignore  README.md  chatlog.json  pyproject.toml
src/textual_guis/: __init__.py  agent_eng_gui.py  chatcontainer.py  chatgui.py  evaluation.py  function_calling_gui.py  llmchat.py  module.py  prompt_eng_gui.py  styles.tcss  utils.py
tests/: test_parse_text_for_tag.py
