[project]
name = "textual-guis"
version = "0.1.0"
description = "LLM chat gui using textual"
authors = [
    {name = "John Dunavent", email = "dunavent.jm@gmail.com"},
]
dependencies = [
    "textual>=0.79",
    "litellm>=1.44",
    "typer>=0.12"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
